# weather_harvester

./: .env  README.md  manage.py  pyproject.toml  setup.py
configs/: example.ini  example.json
docs/: INDEX.md  README.md
docs/code_explanations/: config_explanation.md  logger_explanation.md  utils_explanation.md
docs/requirements/: REQUIREMENTS.md
home/: views.py
src/weather_harvester/: __init__.py  __main__.py  alerts.py  cache.py  cli.py  config.py  fetcher.py  logger.py  utils.py
src/weather_harvester.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/weather_harvester/plugins/: __init__.py  base.py  sample_plugin.py
static/css/: style.css
static/js/: script.js
templates/html/: index.html
tests/: __init__.py  test_cache.py  test_config.py  test_fetcher.py
weather_harvester/: asgi.py  settings.py  urls.py  wsgi.py
